--- a/vt.vcxproj
+++ b/vt.vcxproj
@@ -187,16 +187,18 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="json11.hpp" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="resource1.h" />
+    <ClInclude Include="resource2.h" />
+    <ClInclude Include="resource3.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="vt.h" />
     <ClInclude Include="vtDlg.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\json11\json11.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Use</PrecompiledHeader>
-    </ClCompile>
+    <ClCompile Include="json11.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -208,11 +210,16 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="vt.rc" />
+    <ResourceCompile Include="vt1.rc" />
+    <ResourceCompile Include="vt2.rc" />
+    <ResourceCompile Include="vt3.rc" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\vt.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="image\background\img105.bmp" />
+    <Image Include="image\background\img105.jpg" />
     <Image Include="res\Toolbar.bmp" />
     <Image Include="res\Toolbar256.bmp" />
     <Image Include="res\vt.ico" />
