增加dh device图片，根据配置文件加载

--- a/user.cfg
+++ b/user.cfg
@@ -1,7 +1,83 @@
 
 # Many different value types.
 
-[Types]
+[UI]
+main_dialog_bk = "./image/background/bk.bmp"
+dh_online_img = "./image/online.ico"
+dh_offline_img = "./image/offline.ico"
+dh_in_img = "./image/callin.ico"
+dh_active_img = "./image/active.ico"
+dh_miss_img = "./image/callmiss.ico"
+dh_out_img = "./image/callout.ico"
+dh_close_img = "./image/close.ico"
+dh_busy_img = "./image/busy.ico"
+gb_online_img = "./image/gb_online.ico"
+gb_offline_img = "./image/gb_offline.ico"
+gb_active_img = "./image/gb_active.ico"
+dh_count	= 30
+dh_w		= 32
+dh_h		= 32
+dh1_x		= 200
+dh1_y		= 300
+dh2_x		= 300
+dh2_y		= 300
+dh3_x		= 400
+dh3_y		= 300
+dh4_x		= 500
+dh4_y		= 300
+dh5_x		= 600
+dh5_y		= 300
+dh6_x		= 700
+dh6_y		= 300
+dh7_x		= 800
+dh7_y		= 300
+dh8_x		= 900
+dh8_y		= 300
+dh9_x		= 1000
+dh9_y		= 300
+dh10_x		= 1100
+dh10_y		= 300
+dh11_x		= 1200
+dh11_y		= 300
+dh12_x		= 1300
+dh12_y		= 300
+dh13_x		= 1400
+dh13_y		= 300
+dh14_x		= 1500
+dh14_y		= 300
+dh15_x		= 1600
+dh15_y		= 300
+
+dh16_x		= 200
+dh16_y		= 600
+dh17_x		= 300
+dh17_y		= 600
+dh18_x		= 400
+dh18_y		= 600
+dh19_x		= 500
+dh19_y		= 600
+dh20_x		= 600
+dh20_y		= 600
+dh21_x		= 700
+dh21_y		= 600
+dh22_x		= 800
+dh22_y		= 600
+dh23_x		= 900
+dh23_y		= 600
+dh24_x		= 1000
+dh24_y		= 600
+dh25_x		= 1100
+dh25_y		= 600
+dh26_x		= 1200
+dh26_y		= 600
+dh27_x		= 1300
+dh27_y		= 600
+dh28_x		= 1400
+dh28_y		= 600
+dh29_x		= 1500
+dh29_y		= 600
+dh30_x		= 1600
+dh30_y		= 600
 
 bool0      = true
 bool1      = false
