增加啊的GB控件按配置文件加载

--- a/user.cfg
+++ b/user.cfg
@@ -11,73 +11,312 @@ dh_miss_img = "./image/callmiss.ico"
 dh_out_img = "./image/callout.ico"
 dh_close_img = "./image/close.ico"
 dh_busy_img = "./image/busy.ico"
-gb_online_img = "./image/gb_online.ico"
+gb_online_img = "./image/gb_online.png"
 gb_offline_img = "./image/gb_offline.ico"
 gb_active_img = "./image/gb_active.ico"
 dh_count	= 30
 dh_w		= 32
 dh_h		= 32
+
+dh1_name	= "DH1"	
+dh1_stake	= "K+"
 dh1_x		= 200
 dh1_y		= 300
+
+dh2_name	= "DH2"	
+dh2_stake	= "K+"
 dh2_x		= 300
 dh2_y		= 300
+
+dh3_name	= "DH3"	
+dh3_stake	= "K+"
 dh3_x		= 400
 dh3_y		= 300
+
+dh4_name	= "DH4"	
+dh4_stake	= "K+"
 dh4_x		= 500
 dh4_y		= 300
+
+dh5_name	= "DH5"	
+dh5_stake	= "K+"
 dh5_x		= 600
 dh5_y		= 300
+
+dh6_name	= "DH6"	
+dh6_stake	= "K+"
 dh6_x		= 700
 dh6_y		= 300
+
+dh7_name	= "DH7"	
+dh7_stake	= "K+"
 dh7_x		= 800
 dh7_y		= 300
+
+dh8_name	= "DH8"	
+dh8_stake	= "K+"
 dh8_x		= 900
 dh8_y		= 300
+
+dh9_name	= "DH9"	
+dh9_stake	= "K+"
 dh9_x		= 1000
 dh9_y		= 300
+
+dh10_name	= "DH10"	
+dh10_stake	= "K+"
 dh10_x		= 1100
 dh10_y		= 300
+
+dh11_name	= "DH11"	
+dh11_stake	= "K+"
 dh11_x		= 1200
 dh11_y		= 300
+
+dh12_name	= "DH12"	
+dh12_stake	= "K+"
 dh12_x		= 1300
 dh12_y		= 300
+
+dh13_name	= "DH13"	
+dh13_stake	= "K+"
 dh13_x		= 1400
 dh13_y		= 300
+
+dh14_name	= "DH14"	
+dh14_stake	= "K+"
 dh14_x		= 1500
 dh14_y		= 300
+
+dh15_name	= "DH15"	
+dh15_stake	= "K+"
 dh15_x		= 1600
 dh15_y		= 300
 
+dh16_name	= "DH16"	
+dh16_stake	= "K+"
 dh16_x		= 200
 dh16_y		= 600
+
+dh17_name	= "DH17"	
+dh17_stake	= "K+"
 dh17_x		= 300
 dh17_y		= 600
+
+dh18_name	= "DH18"	
+dh18_stake	= "K+"
 dh18_x		= 400
 dh18_y		= 600
+
+dh19_name	= "DH19"	
+dh19_stake	= "K+"
 dh19_x		= 500
 dh19_y		= 600
+
+dh20_name	= "DH20"	
+dh20_stake	= "K+"
 dh20_x		= 600
 dh20_y		= 600
+
+dh21_name	= "DH21"	
+dh21_stake	= "K+"
 dh21_x		= 700
 dh21_y		= 600
+
+dh22_name	= "DH22"	
+dh22_stake	= "K+"
 dh22_x		= 800
 dh22_y		= 600
+
+dh23_name	= "DH23"	
+dh23_stake	= "K+"
 dh23_x		= 900
 dh23_y		= 600
+
+dh24_name	= "DH24"	
+dh24_stake	= "K+"
 dh24_x		= 1000
 dh24_y		= 600
+
+dh25_name	= "DH25"	
+dh25_stake	= "K+"
 dh25_x		= 1100
 dh25_y		= 600
+
+dh26_name	= "DH26"	
+dh26_stake	= "K+"
 dh26_x		= 1200
 dh26_y		= 600
+
+dh27_name	= "DH27"	
+dh27_stake	= "K+"
 dh27_x		= 1300
 dh27_y		= 600
+
+dh28_name	= "DH28"	
+dh28_stake	= "K+"
 dh28_x		= 1400
 dh28_y		= 600
+
+dh29_name	= "DH29"	
+dh29_stake	= "K+"
 dh29_x		= 1500
 dh29_y		= 600
+
+dh30_name	= "DH30"	
+dh30_stake	= "K+"
 dh30_x		= 1600
 dh30_y		= 600
+
+gb1_name	= "GB1"	
+gb1_stake	= "K+"
+gb1_x		= 200
+gb1_y		= 222
+
+gb2_name	= "GB2"	
+gb2_stake	= "K+"
+gb2_x		= 300
+gb2_y		= 222
+
+gb3_name	= "GB3"	
+gb3_stake	= "K+"
+gb3_x		= 400
+gb3_y		= 222
+
+gb4_name	= "GB4"	
+gb4_stake	= "K+"
+gb4_x		= 500
+gb4_y		= 222
+
+gb5_name	= "GB5"	
+gb5_stake	= "K+"
+gb5_x		= 600
+gb5_y		= 222
+
+gb6_name	= "GB6"	
+gb6_stake	= "K+"
+gb6_x		= 700
+gb6_y		= 222
+
+gb7_name	= "GB7"	
+gb7_stake	= "K+"
+gb7_x		= 800
+gb7_y		= 222
+
+gb8_name	= "GB8"	
+gb8_stake	= "K+"
+gb8_x		= 900
+gb8_y		= 222
+
+gb9_name	= "GB9"	
+gb9_stake	= "K+"
+gb9_x		= 1000
+gb9_y		= 222
+
+gb10_name	= "GB10"	
+gb10_stake	= "K+"
+gb10_x		= 1100
+gb10_y		= 222
+
+gb11_name	= "GB11"	
+gb11_stake	= "K+"
+gb11_x		= 1200
+gb11_y		= 222
+
+gb12_name	= "GB12"	
+gb12_stake	= "K+"
+gb12_x		= 1300
+gb12_y		= 222
+
+gb13_name	= "GB13"	
+gb13_stake	= "K+"
+gb13_x		= 1400
+gb13_y		= 222
+
+gb14_name	= "GB14"	
+gb14_stake	= "K+"
+gb14_x		= 1500
+gb14_y		= 222
+
+gb15_name	= "GB15"	
+gb15_stake	= "K+"
+gb15_x		= 1600
+gb15_y		= 222
+
+gb16_name	= "GB16"	
+gb16_stake	= "K+"
+gb16_x		= 200
+gb16_y		= 523
+
+gb17_name	= "GB17"	
+gb17_stake	= "K+"
+gb17_x		= 300
+gb17_y		= 523
+
+gb18_name	= "GB18"	
+gb18_stake	= "K+"
+gb18_x		= 400
+gb18_y		= 523
+
+gb19_name	= "GB19"	
+gb19_stake	= "K+"
+gb19_x		= 500
+gb19_y		= 523
+
+gb20_name	= "GB20"	
+gb20_stake	= "K+"
+gb20_x		= 600
+gb20_y		= 523
+
+gb21_name	= "GB21"	
+gb21_stake	= "K+"
+gb21_x		= 700
+gb21_y		= 523
+
+gb22_name	= "GB22"	
+gb22_stake	= "K+"
+gb22_x		= 800
+gb22_y		= 523
+
+gb23_name	= "GB23"	
+gb23_stake	= "K+"
+gb23_x		= 900
+gb23_y		= 523
+
+gb24_name	= "GB24"	
+gb24_stake	= "K+"
+gb24_x		= 1000
+gb24_y		= 523
+
+gb25_name	= "GB25"	
+gb25_stake	= "K+"
+gb25_x		= 1100
+gb25_y		= 523
+
+gb26_name	= "GB26"	
+gb26_stake	= "K+"
+gb26_x		= 1200
+gb26_y		= 523
+
+gb27_name	= "GB27"	
+gb27_stake	= "K+"
+gb27_x		= 1300
+gb27_y		= 523
+
+gb28_name	= "GB28"	
+gb28_stake	= "K+"
+gb28_x		= 1400
+gb28_y		= 523
+
+gb29_name	= "GB29"	
+gb29_stake	= "K+"
+gb29_x		= 1500
+gb29_y		= 523
+
+gb30_name	= "GB30"	
+gb30_stake	= "K+"
+gb30_x		= 1600
+gb30_y		= 523
 
 bool0      = true
 bool1      = false
