--- a/user.cfg
+++ b/user.cfg
@@ -14,6 +14,13 @@ dh_busy_img = "./image/busy.ico"
 gb_online_img = "./image/gb_online.png"
 gb_offline_img = "./image/gb_offline.ico"
 gb_active_img = "./image/gb_active.ico"
+
+option_img = "./image/options_48.png"
+option_button_x = 1880
+option_button_y = 50
+option_button_w = 1880
+option_button_h = 50
+
 dh_count	= 30
 dh_w		= 32
 dh_h		= 32
@@ -96,152 +103,152 @@ dh15_y		= 300
 dh16_name	= "DH16"	
 dh16_stake	= "K+"
 dh16_x		= 200
-dh16_y		= 600
+dh16_y		= 750
 
 dh17_name	= "DH17"	
 dh17_stake	= "K+"
 dh17_x		= 300
-dh17_y		= 600
+dh17_y		= 750
 
 dh18_name	= "DH18"	
 dh18_stake	= "K+"
 dh18_x		= 400
-dh18_y		= 600
+dh18_y		= 750
 
 dh19_name	= "DH19"	
 dh19_stake	= "K+"
 dh19_x		= 500
-dh19_y		= 600
+dh19_y		= 750
 
 dh20_name	= "DH20"	
 dh20_stake	= "K+"
 dh20_x		= 600
-dh20_y		= 600
+dh20_y		= 750
 
 dh21_name	= "DH21"	
 dh21_stake	= "K+"
 dh21_x		= 700
-dh21_y		= 600
+dh21_y		= 750
 
 dh22_name	= "DH22"	
 dh22_stake	= "K+"
 dh22_x		= 800
-dh22_y		= 600
+dh22_y		= 750
 
 dh23_name	= "DH23"	
 dh23_stake	= "K+"
 dh23_x		= 900
-dh23_y		= 600
+dh23_y		= 750
 
 dh24_name	= "DH24"	
 dh24_stake	= "K+"
 dh24_x		= 1000
-dh24_y		= 600
+dh24_y		= 750
 
 dh25_name	= "DH25"	
 dh25_stake	= "K+"
 dh25_x		= 1100
-dh25_y		= 600
+dh25_y		= 750
 
 dh26_name	= "DH26"	
 dh26_stake	= "K+"
 dh26_x		= 1200
-dh26_y		= 600
+dh26_y		= 750
 
 dh27_name	= "DH27"	
 dh27_stake	= "K+"
 dh27_x		= 1300
-dh27_y		= 600
+dh27_y		= 750
 
 dh28_name	= "DH28"	
 dh28_stake	= "K+"
 dh28_x		= 1400
-dh28_y		= 600
+dh28_y		= 750
 
 dh29_name	= "DH29"	
 dh29_stake	= "K+"
 dh29_x		= 1500
-dh29_y		= 600
+dh29_y		= 750
 
 dh30_name	= "DH30"	
 dh30_stake	= "K+"
 dh30_x		= 1600
-dh30_y		= 600
+dh30_y		= 750
 
 gb1_name	= "GB1"	
 gb1_stake	= "K+"
 gb1_x		= 200
-gb1_y		= 222
+gb1_y		= 111
 
 gb2_name	= "GB2"	
 gb2_stake	= "K+"
 gb2_x		= 300
-gb2_y		= 222
+gb2_y		= 111
 
 gb3_name	= "GB3"	
 gb3_stake	= "K+"
 gb3_x		= 400
-gb3_y		= 222
+gb3_y		= 111
 
 gb4_name	= "GB4"	
 gb4_stake	= "K+"
 gb4_x		= 500
-gb4_y		= 222
+gb4_y		= 111
 
 gb5_name	= "GB5"	
 gb5_stake	= "K+"
 gb5_x		= 600
-gb5_y		= 222
+gb5_y		= 111
 
 gb6_name	= "GB6"	
 gb6_stake	= "K+"
 gb6_x		= 700
-gb6_y		= 222
+gb6_y		= 111
 
 gb7_name	= "GB7"	
 gb7_stake	= "K+"
 gb7_x		= 800
-gb7_y		= 222
+gb7_y		= 111
 
 gb8_name	= "GB8"	
 gb8_stake	= "K+"
 gb8_x		= 900
-gb8_y		= 222
+gb8_y		= 111
 
 gb9_name	= "GB9"	
 gb9_stake	= "K+"
 gb9_x		= 1000
-gb9_y		= 222
+gb9_y		= 111
 
 gb10_name	= "GB10"	
 gb10_stake	= "K+"
 gb10_x		= 1100
-gb10_y		= 222
+gb10_y		= 111
 
 gb11_name	= "GB11"	
 gb11_stake	= "K+"
 gb11_x		= 1200
-gb11_y		= 222
+gb11_y		= 111
 
 gb12_name	= "GB12"	
 gb12_stake	= "K+"
 gb12_x		= 1300
-gb12_y		= 222
+gb12_y		= 111
 
 gb13_name	= "GB13"	
 gb13_stake	= "K+"
 gb13_x		= 1400
-gb13_y		= 222
+gb13_y		= 111
 
 gb14_name	= "GB14"	
 gb14_stake	= "K+"
 gb14_x		= 1500
-gb14_y		= 222
+gb14_y		= 111
 
 gb15_name	= "GB15"	
 gb15_stake	= "K+"
 gb15_x		= 1600
-gb15_y		= 222
+gb15_y		= 111
 
 gb16_name	= "GB16"	
 gb16_stake	= "K+"
@@ -317,6 +324,72 @@ gb30_name	= "GB30"
 gb30_stake	= "K+"
 gb30_x		= 1600
 gb30_y		= 523
+
+[DEV_INFO]
+dev_monitor_svr_port	= 9001
+remote_dh_rcv_port		= 9002
+local_dh_rcv_port		= 9003
+remote_gb_rcv_port		= 1200
+dh1_ip		= "192.168.22.1"
+dh2_ip		= "192.168.22.2"
+dh3_ip		= "192.168.22.3"
+dh4_ip		= "192.168.22.4"
+dh5_ip		= "192.168.22.5"
+dh6_ip		= "192.168.22.6"
+dh7_ip		= "192.168.22.7"
+dh8_ip		= "192.168.22.8"
+dh9_ip		= "192.168.22.9"
+dh10_ip		= "192.168.22.10"
+dh11_ip		= "192.168.22.11"
+dh12_ip		= "192.168.22.12"
+dh13_ip		= "192.168.22.13"
+dh14_ip		= "192.168.22.14"
+dh15_ip		= "192.168.22.15"
+dh16_ip		= "192.168.22.16"
+dh17_ip		= "192.168.22.17"
+dh18_ip		= "192.168.22.18"
+dh19_ip		= "192.168.22.19"
+dh20_ip		= "192.168.22.20"
+dh21_ip		= "192.168.22.21"
+dh22_ip		= "192.168.22.22"
+dh23_ip		= "192.168.22.23"
+dh24_ip		= "192.168.22.24"
+dh25_ip		= "192.168.22.25"
+dh26_ip		= "192.168.22.26"
+dh27_ip		= "192.168.22.27"
+dh28_ip		= "192.168.22.28"
+dh29_ip		= "192.168.22.29"
+dh30_ip		= "192.168.22.30"
+gb1_ip		= "192.168.22.1"
+gb2_ip		= "192.168.22.2"
+gb3_ip		= "192.168.22.3"
+gb4_ip		= "192.168.22.4"
+gb5_ip		= "192.168.22.5"
+gb6_ip		= "192.168.22.6"
+gb7_ip		= "192.168.22.7"
+gb8_ip		= "192.168.22.8"
+gb9_ip		= "192.168.22.9"
+gb10_ip		= "192.168.22.10"
+gb11_ip		= "192.168.22.11"
+gb12_ip		= "192.168.22.12"
+gb13_ip		= "192.168.22.13"
+gb14_ip		= "192.168.22.14"
+gb15_ip		= "192.168.22.15"
+gb16_ip		= "192.168.22.16"
+gb17_ip		= "192.168.22.17"
+gb18_ip		= "192.168.22.18"
+gb19_ip		= "192.168.22.19"
+gb20_ip		= "192.168.22.20"
+gb21_ip		= "192.168.22.21"
+gb22_ip		= "192.168.22.22"
+gb23_ip		= "192.168.22.23"
+gb24_ip		= "192.168.22.24"
+gb25_ip		= "192.168.22.25"
+gb26_ip		= "192.168.22.26"
+gb27_ip		= "192.168.22.27"
+gb28_ip		= "192.168.22.28"
+gb29_ip		= "192.168.22.29"
+gb30_ip		= "192.168.22.30"
 
 bool0      = true
 bool1      = false
