点击GB 图标有online变为active状态

--- a/user.cfg
+++ b/user.cfg
@@ -13,7 +13,7 @@ dh_close_img = "./image/close.ico"
 dh_busy_img = "./image/busy.ico"
 gb_online_img = "./image/gb_online.png"
 gb_offline_img = "./image/gb_offline.ico"
-gb_active_img = "./image/gb_active.ico"
+gb_active_img = "./image/gb_active.png"
 
 option_img = "./image/options_48.png"
 option_button_x = 1880
@@ -22,9 +22,12 @@ option_button_w = 1880
 option_button_h = 50
 
 dh_count	= 30
-dh_w		= 32
-dh_h		= 32
+dh_w		= 48
+dh_h		= 48
 
+gb_count	= 30
+gb_w		= 48
+gb_h		= 48
 dh1_name	= "DH1"	
 dh1_stake	= "K+"
 dh1_x		= 200
