add dh server and net cfg code

--- a/user.cfg
+++ b/user.cfg
@@ -329,10 +329,11 @@ gb30_x		= 1600
 gb30_y		= 523
 
 [DEV_INFO]
-dev_monitor_svr_port	= 9001
-remote_dh_rcv_port		= 9002
-local_dh_rcv_port		= 9003
-remote_gb_rcv_port		= 1200
+gb_remote_port		= 1200
+dh_local_svr_port	= 1300
+dh_remote_wav_port	= 1301
+dh_local_wav_port	= 1302
+
 dh1_ip		= "192.168.22.1"
 dh2_ip		= "192.168.22.2"
 dh3_ip		= "192.168.22.3"
