--- a/vt.vcxproj
+++ b/vt.vcxproj
@@ -187,6 +187,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CSvrSocket.h" />
     <ClInclude Include="json11.hpp" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="resource1.h" />
@@ -198,6 +199,7 @@
     <ClInclude Include="vtDlg.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CSvrSocket.cpp" />
     <ClCompile Include="json11.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
