--- a/vt.vcxproj.filters
+++ b/vt.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="resource3.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CSvrSocket.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="vt.cpp">
@@ -54,6 +57,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="json11.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CSvrSocket.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
