--- a/user.cfg
+++ b/user.cfg
@@ -24,307 +24,307 @@ option_button_h = 50
 dh_count	= 30
 dh_w		= 48
 dh_h		= 48
-
+ 
 gb_count	= 30
 gb_w		= 48
 gb_h		= 48
 dh1_name	= "DH1"	
-dh1_stake	= "K+"
+dh1_stake	= ""
 dh1_x		= 200
 dh1_y		= 300
 
 dh2_name	= "DH2"	
-dh2_stake	= "K+"
+dh2_stake	= ""
 dh2_x		= 300
 dh2_y		= 300
 
 dh3_name	= "DH3"	
-dh3_stake	= "K+"
+dh3_stake	= ""
 dh3_x		= 400
 dh3_y		= 300
 
 dh4_name	= "DH4"	
-dh4_stake	= "K+"
+dh4_stake	= ""
 dh4_x		= 500
 dh4_y		= 300
 
 dh5_name	= "DH5"	
-dh5_stake	= "K+"
+dh5_stake	= ""
 dh5_x		= 600
 dh5_y		= 300
 
 dh6_name	= "DH6"	
-dh6_stake	= "K+"
+dh6_stake	= ""
 dh6_x		= 700
 dh6_y		= 300
 
 dh7_name	= "DH7"	
-dh7_stake	= "K+"
+dh7_stake	= ""
 dh7_x		= 800
 dh7_y		= 300
 
 dh8_name	= "DH8"	
-dh8_stake	= "K+"
+dh8_stake	= ""
 dh8_x		= 900
 dh8_y		= 300
 
 dh9_name	= "DH9"	
-dh9_stake	= "K+"
+dh9_stake	= ""
 dh9_x		= 1000
 dh9_y		= 300
 
 dh10_name	= "DH10"	
-dh10_stake	= "K+"
+dh10_stake	= ""
 dh10_x		= 1100
 dh10_y		= 300
 
 dh11_name	= "DH11"	
-dh11_stake	= "K+"
+dh11_stake	= ""
 dh11_x		= 1200
 dh11_y		= 300
 
 dh12_name	= "DH12"	
-dh12_stake	= "K+"
+dh12_stake	= ""
 dh12_x		= 1300
 dh12_y		= 300
 
 dh13_name	= "DH13"	
-dh13_stake	= "K+"
+dh13_stake	= ""
 dh13_x		= 1400
 dh13_y		= 300
 
 dh14_name	= "DH14"	
-dh14_stake	= "K+"
+dh14_stake	= ""
 dh14_x		= 1500
 dh14_y		= 300
 
 dh15_name	= "DH15"	
-dh15_stake	= "K+"
+dh15_stake	= ""
 dh15_x		= 1600
 dh15_y		= 300
 
 dh16_name	= "DH16"	
-dh16_stake	= "K+"
+dh16_stake	= ""
 dh16_x		= 200
 dh16_y		= 750
 
 dh17_name	= "DH17"	
-dh17_stake	= "K+"
+dh17_stake	= ""
 dh17_x		= 300
 dh17_y		= 750
 
 dh18_name	= "DH18"	
-dh18_stake	= "K+"
+dh18_stake	= ""
 dh18_x		= 400
 dh18_y		= 750
 
 dh19_name	= "DH19"	
-dh19_stake	= "K+"
+dh19_stake	= ""
 dh19_x		= 500
 dh19_y		= 750
 
 dh20_name	= "DH20"	
-dh20_stake	= "K+"
+dh20_stake	= ""
 dh20_x		= 600
 dh20_y		= 750
 
 dh21_name	= "DH21"	
-dh21_stake	= "K+"
+dh21_stake	= ""
 dh21_x		= 700
 dh21_y		= 750
 
 dh22_name	= "DH22"	
-dh22_stake	= "K+"
+dh22_stake	= ""
 dh22_x		= 800
 dh22_y		= 750
 
 dh23_name	= "DH23"	
-dh23_stake	= "K+"
+dh23_stake	= ""
 dh23_x		= 900
 dh23_y		= 750
 
 dh24_name	= "DH24"	
-dh24_stake	= "K+"
+dh24_stake	= ""
 dh24_x		= 1000
 dh24_y		= 750
 
 dh25_name	= "DH25"	
-dh25_stake	= "K+"
+dh25_stake	= ""
 dh25_x		= 1100
 dh25_y		= 750
 
 dh26_name	= "DH26"	
-dh26_stake	= "K+"
+dh26_stake	= ""
 dh26_x		= 1200
 dh26_y		= 750
 
 dh27_name	= "DH27"	
-dh27_stake	= "K+"
+dh27_stake	= ""
 dh27_x		= 1300
 dh27_y		= 750
 
 dh28_name	= "DH28"	
-dh28_stake	= "K+"
+dh28_stake	= ""
 dh28_x		= 1400
 dh28_y		= 750
 
 dh29_name	= "DH29"	
-dh29_stake	= "K+"
+dh29_stake	= ""
 dh29_x		= 1500
 dh29_y		= 750
 
 dh30_name	= "DH30"	
-dh30_stake	= "K+"
+dh30_stake	= ""
 dh30_x		= 1600
 dh30_y		= 750
 
 gb1_name	= "GB1"	
-gb1_stake	= "K+"
+gb1_stake	= ""
 gb1_x		= 200
 gb1_y		= 111
 
 gb2_name	= "GB2"	
-gb2_stake	= "K+"
+gb2_stake	= ""
 gb2_x		= 300
 gb2_y		= 111
 
 gb3_name	= "GB3"	
-gb3_stake	= "K+"
+gb3_stake	= ""
 gb3_x		= 400
 gb3_y		= 111
 
 gb4_name	= "GB4"	
-gb4_stake	= "K+"
+gb4_stake	= ""
 gb4_x		= 500
 gb4_y		= 111
 
 gb5_name	= "GB5"	
-gb5_stake	= "K+"
+gb5_stake	= ""
 gb5_x		= 600
 gb5_y		= 111
 
 gb6_name	= "GB6"	
-gb6_stake	= "K+"
+gb6_stake	= ""
 gb6_x		= 700
 gb6_y		= 111
 
 gb7_name	= "GB7"	
-gb7_stake	= "K+"
+gb7_stake	= ""
 gb7_x		= 800
 gb7_y		= 111
 
 gb8_name	= "GB8"	
-gb8_stake	= "K+"
+gb8_stake	= ""
 gb8_x		= 900
 gb8_y		= 111
 
 gb9_name	= "GB9"	
-gb9_stake	= "K+"
+gb9_stake	= ""
 gb9_x		= 1000
 gb9_y		= 111
 
 gb10_name	= "GB10"	
-gb10_stake	= "K+"
+gb10_stake	= ""
 gb10_x		= 1100
 gb10_y		= 111
 
 gb11_name	= "GB11"	
-gb11_stake	= "K+"
+gb11_stake	= ""
 gb11_x		= 1200
 gb11_y		= 111
 
 gb12_name	= "GB12"	
-gb12_stake	= "K+"
+gb12_stake	= ""
 gb12_x		= 1300
 gb12_y		= 111
 
 gb13_name	= "GB13"	
-gb13_stake	= "K+"
+gb13_stake	= ""
 gb13_x		= 1400
 gb13_y		= 111
 
 gb14_name	= "GB14"	
-gb14_stake	= "K+"
+gb14_stake	= ""
 gb14_x		= 1500
 gb14_y		= 111
 
 gb15_name	= "GB15"	
-gb15_stake	= "K+"
+gb15_stake	= ""
 gb15_x		= 1600
 gb15_y		= 111
 
 gb16_name	= "GB16"	
-gb16_stake	= "K+"
+gb16_stake	= ""
 gb16_x		= 200
 gb16_y		= 523
 
 gb17_name	= "GB17"	
-gb17_stake	= "K+"
+gb17_stake	= ""
 gb17_x		= 300
 gb17_y		= 523
 
 gb18_name	= "GB18"	
-gb18_stake	= "K+"
+gb18_stake	= ""
 gb18_x		= 400
 gb18_y		= 523
 
 gb19_name	= "GB19"	
-gb19_stake	= "K+"
+gb19_stake	= ""
 gb19_x		= 500
 gb19_y		= 523
 
 gb20_name	= "GB20"	
-gb20_stake	= "K+"
+gb20_stake	= ""
 gb20_x		= 600
 gb20_y		= 523
 
 gb21_name	= "GB21"	
-gb21_stake	= "K+"
+gb21_stake	= ""
 gb21_x		= 700
 gb21_y		= 523
 
 gb22_name	= "GB22"	
-gb22_stake	= "K+"
+gb22_stake	= ""
 gb22_x		= 800
 gb22_y		= 523
 
 gb23_name	= "GB23"	
-gb23_stake	= "K+"
+gb23_stake	= ""
 gb23_x		= 900
 gb23_y		= 523
 
 gb24_name	= "GB24"	
-gb24_stake	= "K+"
+gb24_stake	= ""
 gb24_x		= 1000
 gb24_y		= 523
 
 gb25_name	= "GB25"	
-gb25_stake	= "K+"
+gb25_stake	= ""
 gb25_x		= 1100
 gb25_y		= 523
 
 gb26_name	= "GB26"	
-gb26_stake	= "K+"
+gb26_stake	= ""
 gb26_x		= 1200
 gb26_y		= 523
 
 gb27_name	= "GB27"	
-gb27_stake	= "K+"
+gb27_stake	= ""
 gb27_x		= 1300
 gb27_y		= 523
 
 gb28_name	= "GB28"	
-gb28_stake	= "K+"
+gb28_stake	= ""
 gb28_x		= 1400
 gb28_y		= 523
 
 gb29_name	= "GB29"	
-gb29_stake	= "K+"
+gb29_stake	= ""
 gb29_x		= 1500
 gb29_y		= 523
 
 gb30_name	= "GB30"	
-gb30_stake	= "K+"
+gb30_stake	= ""
 gb30_x		= 1600
 gb30_y		= 523
 
