callin dialog load pic, return call in

--- a/user.cfg
+++ b/user.cfg
@@ -3,12 +3,15 @@
 
 [UI]
 main_dialog_bk = "./image/background/bk.bmp"
+callin_dialog_bk = "./image/background/bk.bmp"
 dh_online_img = "./image/online.ico"
 dh_offline_img = "./image/offline.ico"
 dh_in_img = "./image/callin.ico"
+dh_answer_img = "./image/callin.ico"
 dh_active_img = "./image/active.ico"
 dh_miss_img = "./image/callmiss.ico"
 dh_out_img = "./image/callout.ico"
+dh_hungup_img = "./image/close.ico"
 dh_close_img = "./image/close.ico"
 dh_busy_img = "./image/busy.ico"
 gb_online_img = "./image/gb_online.png"
