--- a/user.cfg
+++ b/user.cfg
@@ -7,11 +7,11 @@ callin_dialog_bk = "./image/background/bk.bmp"
 dh_online_img = "./image/online.ico"
 dh_offline_img = "./image/offline.ico"
 dh_in_img = "./image/callin.ico"
-dh_answer_img = "./image/callin.ico"
-dh_active_img = "./image/active.ico"
+dh_answer_img = "./image/ic_incall_answer.png"
+dh_active_img = "./image/ic_incall_ongoing.png"
 dh_miss_img = "./image/callmiss.ico"
 dh_out_img = "./image/callout.ico"
-dh_hungup_img = "./image/close.ico"
+dh_hungup_img = "./image/ic_incall_hangup.png"
 dh_close_img = "./image/close.ico"
 dh_busy_img = "./image/busy.ico"
 gb_online_img = "./image/gb_online.png"
