1增加鼠标左键拖动选择GB 2增加鼠标右键拖动不选择GB 3 修改state 定义 4 增加菜单(无功能） 5 修改部分图片

--- a/user.cfg
+++ b/user.cfg
@@ -4,24 +4,25 @@
 [UI]
 main_dialog_bk = "./image/background/bk.bmp"
 callin_dialog_bk = "./image/background/bk.bmp"
-dh_online_img = "./image/online.ico"
-dh_offline_img = "./image/offline.ico"
-dh_in_img = "./image/callin.ico"
-dh_answer_img = "./image/ic_incall_answer.png"
+dh_online_img = "./image/dh_online.png"
+dh_offline_img = "./image/dh_offline.png"
+dh_in_img = "./image/callin.png"
+dh_answer_img = "./image/callin.png"
 dh_active_img = "./image/ic_incall_ongoing.png"
-dh_miss_img = "./image/callmiss.ico"
+dh_miss_img = "./image/callmiss.png"
 dh_out_img = "./image/callout.ico"
 dh_hungup_img = "./image/ic_incall_hangup.png"
-dh_close_img = "./image/close.ico"
-dh_busy_img = "./image/busy.ico"
-gb_online_img = "./image/gb_online.png"
-gb_offline_img = "./image/gb_offline.ico"
-gb_active_img = "./image/gb_active.png"
+dh_close_img = "./image/ic_incall_hangup.png"
+dh_busy_img = "./image/busy.png"
+gb_online_pa_on_img = "./image/gb_online_pa_on.png"
+gb_offline_pa_on_img = "./image/gb_offline_pa_on.png"
+gb_online_pa_off_img = "./image/gb_online_pa_off.png"
+gb_offline_pa_off_img = "./image/gb_offline_pa_off.png"
 
 option_img = "./image/options_48.png"
-option_button_x = 1880
+option_button_x = 1800
 option_button_y = 50
-option_button_w = 1880
+option_button_w = 50
 option_button_h = 50
 
 dh_count	= 30
