--- a/vt.vcxproj
+++ b/vt.vcxproj
@@ -190,6 +190,7 @@
     <ClInclude Include="CallinDlg.h" />
     <ClInclude Include="CalloutDlg.h" />
     <ClInclude Include="CSvrSocket.h" />
+    <ClInclude Include="DataEntities.h" />
     <ClInclude Include="json11.hpp" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="resource1.h" />
@@ -204,6 +205,7 @@
     <ClCompile Include="CallinDlg.cpp" />
     <ClCompile Include="CalloutDlg.cpp" />
     <ClCompile Include="CSvrSocket.cpp" />
+    <ClCompile Include="DataEntities.cpp" />
     <ClCompile Include="json11.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -224,9 +226,12 @@
     <None Include="res\vt.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="image\201635822309260137.bmp" />
     <Image Include="image\background\bitmap2.bmp" />
+    <Image Include="image\background\bitmap3.bmp" />
     <Image Include="image\background\img105.bmp" />
     <Image Include="image\background\img105.jpg" />
+    <Image Include="image\main_bk.bmp" />
     <Image Include="image\options_48.bmp" />
     <Image Include="image\options_48.png" />
     <Image Include="res\Toolbar.bmp" />
