1 完善了callin dlg 's callinfo 2 add call history dlg

--- a/user.cfg
+++ b/user.cfg
@@ -39,6 +39,9 @@ dh_h		= 48
 gb_count	= 30
 gb_w		= 48
 gb_h		= 48
+
+dh_client_name	= "DH_1#"	
+
 dh1_name	= "DH1"	
 dh1_stake	= ""
 dh1_x		= 200
@@ -339,6 +342,8 @@ gb30_stake	= ""
 gb30_x		= 1600
 gb30_y		= 773
 
+[RECORD]
+rec_path	= "./rec"
 [DEV_INFO]
 gb_remote_port		= 1200
 dh_local_svr_port	= 1300
