--- a/vt.vcxproj.filters
+++ b/vt.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="CallHistoryDlg.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="PcmSender.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="vt.cpp">
@@ -84,6 +87,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CallHistoryDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="PcmSender.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
